# qingzhou-agent

./: .gitignore  AGENTS.md  README.md  agent.md  build.ps1  langgraph.json  pyproject.toml  qingzhou.cmd  requirements-asr.txt  requirements-tts.txt  requirements.txt  start.ps1  stop.ps1
agent/: __init__.py  acp.py  asr.py  asr_server.py  commands.py  config.py  context.py  context_references.py  cron.py  graph.py  kanban.py  llm_config.py  logging.py  mcp.py  memory.py  moa.py  permissions.py  prompt.py  rag.py  response_guard.py  skills.py  subagent.py  tasks.py  tts.py
backend/: .env.example  .gitignore  .mcp.example.json  dev.ps1  dev_noload.ps1  langgraph.json  pyproject.toml  requirements.txt
config/: xu-agent.example.json
docs/: acp.md  agent-middleware.md  discord.md  frontend-stream-throttle.md  frontend-toolresult-perf.md  hermes-comparison.md  hermes-context-compression.md  langgraph-hot-reload-cancel.md  lark-final-ai-message-overwrite.md  lark-hermes-comparison.md  qingzhou-context-compression.md  qingzhou-moa.md  release-1.0.0.md  telegram.md  weixin-ilink.md
frontend/: .env.example  .gitignore  README.md  next.config.mjs  package.json  pnpm-lock.yaml
qingzhou_cli/: __init__.py  main.py
scripts/: build_rag_index.py  weixin_login.py
tests/: test_acp.py  test_agent_botpy.py  test_agent_commands.py  test_agent_config.py  test_agent_context_manual_compact.py  test_agent_context_references.py  test_agent_context_snip.py  test_agent_context_tool_prune.py  test_agent_discord.py  test_agent_lark.py  test_agent_logging.py  test_agent_mcp.py  test_asr.py  (+21 more)
(+126 files in other folders)
