[project]
name = "xu-agent"
version = "1.2.0"
requires-python = ">=3.11"
dependencies = [
    "langchain-anthropic>=0.3",
    "langchain>=1.0",
    "langchain-openai>=0.3",
    "langgraph>=0.4",
    "langgraph-cli[inmem]>=0.2",
    "matplotlib>=3.8",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
qingzhou = "qingzhou_cli.main:main"

[tool.setuptools.packages.find]
include = ["agent*", "gateway*", "qingzhou_cli*", "tools*"]
